fix issue of overlapping, label, and time picker

--- a/app/chart-history.scss
+++ b/app/chart-history.scss
@@ -78,8 +78,8 @@
     }
     .datepicker-container {
         .datepicker-display-wrapper .datepicker-display {
-            max-width: 140px;
-            padding: 4px 7px;
+            max-width: 160px;
+            padding: 4px 25px 4px 7px;
         }
         .datepicker-calendar {
             > div.calendar {
